...
        }}
      />
      <Tabs.Screen
        name="(compose)"
        options={{
          title: 'Post',
          tabBarButtonTestID: 'post-tab',
          tabBarAccessibilityLabel: 'Post tab',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="add-circle-outline" size={size} color={color} />
          ),
        }}
      />
...
        }}
      />
      <Tabs.Screen
        name="(profile)"
        options={{
          title: 'Profile',
          tabBarButtonTestID: 'profile-tab',
          tabBarAccessibilityLabel: 'Profile tab',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="person-outline" size={size} color={color} />
          ),
        }}
      />
...
