...
  {
    name: 'Julius Caesar',
    email: 'julius.caesar@gmail.com',
    avatarPath: 'avatar-02.png',
  },
  { name: 'Augustus', email: 'augustus@gmail.com', avatarPath: 'avatar-03.png' },
  { name: 'Cicero', email: 'cicero@gmail.com', avatarPath: 'avatar-04.png' },
  { name: 'Seneca', email: 'seneca@gmail.com', avatarPath: 'avatar-05.png' },
] as const;

const isEnabled = __DEV__;
const canSwitchAccounts = APP_CONFIG.isLocalSupabase;
const DEBUG_BUTTON_SIZE = 46;
...
