appId: com.proxy.ripple
---
- launchApp:
    clearState: true
    clearKeychain: true

- extendedWaitUntil:
    visible: "you@example.com"
    timeout: 15000
- tapOn: "you@example.com"
- inputText: ${EMAIL}
- tapOn: "Enter your password"
- inputText: "12345678"
- hideKeyboard
- tapOn: "Sign In"
- extendedWaitUntil:
    visible:
      id: "feed-list"
    timeout: 15000
